--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "knex": "^0.95.1",
     "morgan": "^1.10.0",
+    "pg": "^8.5.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
